--- a/src/components/vue-cal/i18n/fr.json
+++ b/src/components/vue-cal/i18n/fr.json
@@ -4,5 +4,6 @@
   "years": "Années",
   "week": "Semaine",
   "today": "Aujourd'hui",
-  "noEvent": "Aucun événement"
+  "noEvent": "Aucun événement",
+  "dateFormat": "DDDD d mmmm yyyy"
 }
