--- a/src/components/vue-cal/i18n/it.json
+++ b/src/components/vue-cal/i18n/it.json
@@ -4,5 +4,6 @@
   "years": "Anni",
   "week": "Settimana",
   "today": "Oggi",
-  "noEvent": "No evento"
+  "noEvent": "No evento",
+  "dateFormat": "DDDD d mmmm yyyy"
 }
