--- a/src/components/vue-cal/i18n/it.json
+++ b/src/components/vue-cal/i18n/it.json
@@ -2,7 +2,10 @@
   "weekDays": ["Lunedì", "Martedì", "Mercoledì", "Giovedì", "Venerdì", "Sabato", "Domenica"],
   "months": ["Gennaio", "Febbraio", "Marzo", "Aprile", "Maggio", "Giugno", "Luglio", "Agosto", "Settembre", "Ottobre", "Novembre", "Dicembre"],
   "years": "Anni",
+  "year": "Anno",
+  "month": "Mese",
   "week": "Settimana",
+  "day": "Giorno",
   "today": "Oggi",
   "noEvent": "No evento",
   "dateFormat": "DDDD d mmmm yyyy"
