--- a/src/components/vue-cal/i18n/it.json
+++ b/src/components/vue-cal/i18n/it.json
@@ -8,5 +8,7 @@
   "day": "Giorno",
   "today": "Oggi",
   "noEvent": "No evento",
+  "deleteEvent": "Cancellare",
+  "createEvent": "Creare un evento",
   "dateFormat": "DDDD d mmmm yyyy"
 }
