--- a/src/components/vue-cal/i18n/sp.json
+++ b/src/components/vue-cal/i18n/sp.json
@@ -8,5 +8,7 @@
   "day": "Dia",
   "today": "Hoy",
   "noEvent": "No hay envento",
+  "deleteEvent": "Delete",
+  "createEvent": "Create an event",
   "dateFormat": "DDDD d mmmm yyyy"
 }
