Add new translations and fix the word 'Día'

--- a/src/components/vue-cal/i18n/sp.json
+++ b/src/components/vue-cal/i18n/sp.json
@@ -5,10 +5,10 @@
   "year": "Año",
   "month": "Mes",
   "week": "Semana",
-  "day": "Dia",
+  "day": "Día",
   "today": "Hoy",
   "noEvent": "No hay envento",
-  "deleteEvent": "Delete",
-  "createEvent": "Create an event",
+  "deleteEvent": "Borrar",
+  "createEvent": "Crear un evento",
   "dateFormat": "DDDD d mmmm yyyy"
 }
