--- a/src/components/vue-cal/i18n/zh-cn.json
+++ b/src/components/vue-cal/i18n/zh-cn.json
@@ -2,7 +2,7 @@
   "weekDays": ["星期一", "星期二", "星期三", "星期四", "星期五", "星期六", "星期日"],
   "months": ["一月", "二月", "三月", "四月", "五月", "六月", "七月", "八月", "九月", "十月", "十一月", "十二月"],
   "years": "年",
-  "year": "年",
+  "year": "本年",
   "month": "月",
   "week": "周",
   "day": "日",
@@ -10,5 +10,5 @@
   "noEvent": "暂无活动",
   "deleteEvent": "删除",
   "createEvent": "新建活动",
-  "dateFormat": "DDDD d mmmm yyyy"
+  "dateFormat": "yyyy mmmm d DDDD"
 }
