Add Russian language.

--- a/src/components/vue-cal/i18n/ru.json
+++ b/src/components/vue-cal/i18n/ru.json
@@ -1,35 +1,14 @@
 {
-  "weekDays":    [
-    "Понедельник",
-    "Вторник",
-    "Среда",
-    "Четверг",
-    "Пятница",
-    "Суббота",
-    "Воскресенье"
-  ],
-  "months":      [
-    "Январь",
-    "Февраль",
-    "Март",
-    "Апрель",
-    "Май",
-    "Июнь",
-    "Июль",
-    "Август",
-    "Сентябрь",
-    "Октябрь",
-    "Ноябрь",
-    "Декабрь"
-  ],
-  "years":       "Годы",
-  "year":        "Год",
-  "month":       "Месяц",
-  "week":        "Неделя",
-  "day":         "День",
-  "today":       "Сегодня",
-  "noEvent":     "Нет событий",
+  "weekDays": [ "Понедельник", "Вторник", "Среда", "Четверг", "Пятница", "Суббота", "Воскресенье"],
+  "months": [ "Январь", "Февраль", "Март", "Апрель", "Май", "Июнь", "Июль", "Август", "Сентябрь", "Октябрь", "Ноябрь", "Декабрь"],
+  "years": "Годы",
+  "year": "Год",
+  "month": "Месяц",
+  "week": "Неделя",
+  "day": "День",
+  "today": "Сегодня",
+  "noEvent": "Нет событий",
   "deleteEvent": "Удалить",
   "createEvent": "Создать событие",
-  "dateFormat":  "DDDD mmmm d{S}, yyyy"
+  "dateFormat": "DDDD d mmmm yyyy"
 }
