--- a/src/components/vue-cal/i18n/pt-br.json
+++ b/src/components/vue-cal/i18n/pt-br.json
@@ -8,7 +8,7 @@
   "day": "Dia",
   "today": "Hoje",
   "noEvent": "Sem eventos",
-  "deleteEvent": "Delete",
-  "createEvent": "Create an event",
+  "deleteEvent": "Remover",
+  "createEvent": "Criar um evento",
   "dateFormat": "DDDD d mmmm yyyy"
 }
