[#40] Add 'All day' text into i18n files.

--- a/src/components/vue-cal/i18n/de.json
+++ b/src/components/vue-cal/i18n/de.json
@@ -8,6 +8,7 @@
   "day": "Tag",
   "today": "Heute",
   "noEvent": "Keine Events",
+  "allDay": "",
   "deleteEvent": "Löschen",
   "createEvent": "Event erstellen",
   "dateFormat": "DDDD d mmmm yyyy"
