--- a/src/components/vue-cal/i18n/en.json
+++ b/src/components/vue-cal/i18n/en.json
@@ -8,6 +8,7 @@
   "day": "Day",
   "today": "Today",
   "noEvent": "No Event",
+  "allDay": "All day",
   "deleteEvent": "Delete",
   "createEvent": "Create an event",
   "dateFormat": "DDDD mmmm d{S}, yyyy"
