--- a/src/components/vue-cal/i18n/hr.json
+++ b/src/components/vue-cal/i18n/hr.json
@@ -8,6 +8,7 @@
   "day": "Dan",
   "today": "Današnji dan",
   "noEvent": "Nema događaja",
+  "allDay": "",
   "deleteEvent": "Obriši",
   "createEvent": "Kreiraj događaj",
   "dateFormat": "DDDD d mmmm yyyy"
