--- a/src/components/vue-cal/i18n/it.json
+++ b/src/components/vue-cal/i18n/it.json
@@ -8,6 +8,7 @@
   "day": "Giorno",
   "today": "Oggi",
   "noEvent": "No evento",
+  "allDay": "Tutto giorno",
   "deleteEvent": "Cancellare",
   "createEvent": "Creare un evento",
   "dateFormat": "DDDD d mmmm yyyy"
