--- a/src/components/vue-cal/i18n/sv.json
+++ b/src/components/vue-cal/i18n/sv.json
@@ -8,6 +8,7 @@
   "day": "Dag",
   "today": "Idag",
   "noEvent": "Ingen händelse",
+  "allDay": "",
   "deleteEvent": "Ta bort",
   "createEvent": "Skapa händelse",
   "dateFormat": "DDDD den d mmmm yyyy"
