--- a/src/components/vue-cal/i18n/zh-cn.json
+++ b/src/components/vue-cal/i18n/zh-cn.json
@@ -8,6 +8,7 @@
   "day": "日",
   "today": "今日",
   "noEvent": "暂无活动",
+  "allDay": "",
   "deleteEvent": "删除",
   "createEvent": "新建活动",
   "dateFormat": "yyyy mmmm d DDDD"
