[#40, #54] Show all day events on month view and support 'short' events.

--- a/src/components/vue-cal/i18n/de.json
+++ b/src/components/vue-cal/i18n/de.json
@@ -8,7 +8,7 @@
   "day": "Tag",
   "today": "Heute",
   "noEvent": "Keine Events",
-  "allDay": "",
+  "allDay": "Den ganzen tag",
   "deleteEvent": "Löschen",
   "createEvent": "Event erstellen",
   "dateFormat": "DDDD d mmmm yyyy"
