--- a/src/components/vue-cal/i18n/es.json
+++ b/src/components/vue-cal/i18n/es.json
@@ -8,7 +8,7 @@
   "day": "Día",
   "today": "Hoy",
   "noEvent": "No hay evento",
-  "allDay": "",
+  "allDay": "Todo el día",
   "deleteEvent": "Borrar",
   "createEvent": "Crear un evento",
   "dateFormat": "DDDD d mmmm yyyy"
