[#40] Update "All day" translation for de & zh-cn and add Hyphens.

--- a/src/components/vue-cal/i18n/de.json
+++ b/src/components/vue-cal/i18n/de.json
@@ -8,7 +8,7 @@
   "day": "Tag",
   "today": "Heute",
   "noEvent": "Keine Events",
-  "allDay": "Den ganzen tag",
+  "allDay": "Ganztätig",
   "deleteEvent": "Löschen",
   "createEvent": "Event erstellen",
   "dateFormat": "DDDD d mmmm yyyy"
