[#40] Add all the missing translations for 'All day'.

--- a/src/components/vue-cal/i18n/hr.json
+++ b/src/components/vue-cal/i18n/hr.json
@@ -8,7 +8,7 @@
   "day": "Dan",
   "today": "Današnji dan",
   "noEvent": "Nema događaja",
-  "allDay": "",
+  "allDay": "Cijeli dan",
   "deleteEvent": "Obriši",
   "createEvent": "Kreiraj događaj",
   "dateFormat": "DDDD d mmmm yyyy"
