--- a/src/components/vue-cal/i18n/ka.json
+++ b/src/components/vue-cal/i18n/ka.json
@@ -8,7 +8,7 @@
   "day": "დღე",
   "today": "დღეს",
   "noEvent": "ღონისძიება არ არის",
-  "allDay": "",
+  "allDay": "მთელი დღე",
   "deleteEvent": "წაშლა",
   "createEvent": "შექმენით ღონისძიება",
   "dateFormat": "DDDD d mmmm yyyy"
