--- a/src/components/vue-cal/i18n/sk.json
+++ b/src/components/vue-cal/i18n/sk.json
@@ -8,7 +8,7 @@
   "day": "Deň",
   "today": "Dnes",
   "noEvent": "Bez udalosti",
-  "allDay": "",
+  "allDay": "Celý deň",
   "deleteEvent": "Odstrániť",
   "createEvent": "Vytvoriť udalosť",
   "dateFormat": "DDDD d. mmmm yyyy"
