--- a/src/components/vue-cal/i18n/vi.json
+++ b/src/components/vue-cal/i18n/vi.json
@@ -1,5 +1,6 @@
 {
   "weekDays": ["Thứ hai", "Thứ ba", "Thứ tư", "Thứ năm", "Thứ sáu", "Thứ bảy", "Chủ nhật"],
+  "weekDaysShort": ["T2", "T3", "T4", "T5", "T6", "T7", "CN"],
   "months": ["Tháng 1", "Tháng 2", "Tháng 3", "Tháng 4", "Tháng 5", "Tháng 6", "Tháng 7", "Tháng 8", "Tháng 9", "Tháng 10", "Tháng 11", "Tháng 12"],
   "years": "Năm",
   "year": "Năm nay",
