--- a/src/components/vue-cal/i18n/zh-cn.json
+++ b/src/components/vue-cal/i18n/zh-cn.json
@@ -1,5 +1,6 @@
 {
   "weekDays": ["星期一", "星期二", "星期三", "星期四", "星期五", "星期六", "星期日"],
+  "weekDaysShort": ["一", "二", "三", "四", "五", "六", "日"],
   "months": ["一月", "二月", "三月", "四月", "五月", "六月", "七月", "八月", "九月", "十月", "十一月", "十二月"],
   "years": "年",
   "year": "本年",
