--- a/src/components/vue-cal/i18n/hu.json
+++ b/src/components/vue-cal/i18n/hu.json
@@ -8,6 +8,7 @@
   "day": "Nap",
   "today": "Mai nap",
   "noEvent": "Nincs esemény",
+  "allDay": "All day",
   "deleteEvent": "Esemény törlese",
   "createEvent": "Esemény létrehozása",
   "dateFormat": "DDDD d mmmm yyyy"
