[#88] Add Bulgarian language.

--- a/src/components/vue-cal/i18n/bg.json
+++ b/src/components/vue-cal/i18n/bg.json
@@ -11,5 +11,5 @@
   "allDay": "Цял ден",
   "deleteEvent": "Изтрий",
   "createEvent": "Създай събитие",
-  "dateFormat": "DDDD mmmm d{S}, yyyy"
+  "dateFormat": "DDDD d mmmm yyyy"
 }
