Add Bosnian & Serbian languages.

--- a/src/components/vue-cal/i18n/bs.json
+++ b/src/components/vue-cal/i18n/bs.json
@@ -10,6 +10,6 @@
   "noEvent": "Nema događaja",
   "allDay": "Cijeli dan",
   "deleteEvent": "Obriši",
-  "createEvent": "kreiraj događaj",
-  "dateFormat": "dd.mm.yyyy."
+  "createEvent": "Kreiraj događaj",
+  "dateFormat": "DDDD d mmmm yyyy"
 }
