[#126] Add Danish locale.

--- a/src/components/vue-cal/i18n/da.json
+++ b/src/components/vue-cal/i18n/da.json
@@ -11,5 +11,5 @@
   "allDay": "Hele dagen",
   "deleteEvent": "Slet",
   "createEvent": "Opret et event",
-  "dateFormat": "DD MMM, YYYY"
+  "dateFormat": "DDDD d mmmm yyyy"
 }
