[#136, #137] Add Arabic & Farsi languages.

--- a/src/components/vue-cal/i18n/ar.json
+++ b/src/components/vue-cal/i18n/ar.json
@@ -11,5 +11,5 @@
   "allDay": "طوال اليوم",
   "deleteEvent": "حذف",
   "createEvent": "إنشاء حدث",
-  "dateFormat": "DDDD mmmm d{S}, yyyy"
+  "dateFormat": "DDDD d mmmm yyyy"
 }
