[#153] Added Turkish language.

--- a/src/components/vue-cal/i18n/tr.json
+++ b/src/components/vue-cal/i18n/tr.json
@@ -1,27 +1,6 @@
 {
-  "weekDays": [
-    "Pazartesi",
-    "Salı",
-    "Çarşamba",
-    "Perşembe",
-    "Cuma",
-    "Cumartesi",
-    "Pazar"
-  ],
-  "months": [
-    "Ocak",
-    "Şubat",
-    "Mart",
-    "Nisan",
-    "Mayıs",
-    "Haziran",
-    "Temmuz",
-    "Ağustos",
-    "Eylül",
-    "Ekim",
-    "Kasım",
-    "Aralık"
-  ],
+  "weekDays": ["Pazartesi", "Salı", "Çarşamba", "Perşembe", "Cuma", "Cumartesi", "Pazar"],
+  "months": ["Ocak", "Şubat", "Mart", "Nisan", "Mayıs", "Haziran", "Temmuz", "Ağustos", "Eylül", "Ekim", "Kasım", "Aralık"],
   "years": "Yıllar",
   "year": "Yıl",
   "month": "Ay",
@@ -32,5 +11,5 @@
   "allDay": "Tüm gün",
   "deleteEvent": "Sil",
   "createEvent": "Etkinlik ekle",
-  "dateFormat": "DDDD mmmm d{S}, yyyy"
+  "dateFormat": "DDDD d mmmm yyyy"
 }
