--- a/src/components/vue-cal/i18n/bn.json
+++ b/src/components/vue-cal/i18n/bn.json
@@ -8,7 +8,8 @@
   "day": "দিন",
   "today": "আজ",
   "noEvent": "কার্যসূচী",
+  "allDay": "All day",
   "deleteEvent": "মুছুন",
   "createEvent": "কার্যসূচী তৈরি করুন",
-  "dateFormat": "DDDD mmmm d{S}, yyyy"
+  "dateFormat": "DDDD d mmmm yyyy"
 }
