[#178] Update missing translation in bn.json.

--- a/src/components/vue-cal/i18n/bn.json
+++ b/src/components/vue-cal/i18n/bn.json
@@ -8,7 +8,7 @@
   "day": "দিন",
   "today": "আজ",
   "noEvent": "কার্যসূচী",
-  "allDay": "All day",
+  "allDay": "সারাদিন",
   "deleteEvent": "মুছুন",
   "createEvent": "কার্যসূচী তৈরি করুন",
   "dateFormat": "DDDD d mmmm yyyy"
