--- a/src/components/vue-cal/i18n/el.json
+++ b/src/components/vue-cal/i18n/el.json
@@ -12,5 +12,7 @@
     "allDay": "Ημερήσιο συμβάν",
     "deleteEvent": "Διαγραφή",
     "createEvent": "Δημιουργία συμβάντος",
-    "dateFormat": "DDDD d mmmmG yyyy"
+    "dateFormat": "DDDD d mmmmG yyyy",
+    "am": "π.μ.",
+    "pm": "μ.μ."
 }
