added weekDaysShort to uk.js

--- a/src/vue-cal/i18n/uk.json
+++ b/src/vue-cal/i18n/uk.json
@@ -1,6 +1,7 @@
 {
   "weekDays": ["Понеділок", "Вівторок", "Середа", "Четвер", "П'ятниця", "Субота", "Неділя"],
   "months": ["Січень", "Лютий", "Березень", "Квітень", "Травень", "Червень", "Липень", "Серпень", "Вересень", "Жовтень", "Листопад", "Грудень"],
+  "weekDaysShort":["Пн","Вт","Ср","Чт","Пт","Сб","Нд"],
   "years": "Роки",
   "year": "Рік",
   "month": "Місяць",
