[#341] Add Mongolian locale.

--- a/src/vue-cal/i18n/mn.json
+++ b/src/vue-cal/i18n/mn.json
@@ -11,5 +11,5 @@
   "allDay": "Бүх өдөр",
   "deleteEvent": "Устгах",
   "createEvent": "Шинэ тэмдэглэл",
-  "dateFormat": "dddd MMMM D{S}, YYYY"
+  "dateFormat": "dddd D MMMM YYYY"
 }
