--- a/src/vue-cal/i18n/no.json
+++ b/src/vue-cal/i18n/no.json
@@ -1,5 +1,5 @@
 {
-  "weekDays": ["Mandag", "Tisdag", "Onsdag", "Torsdag", "Fredag", "Lørdag", "Søndag"],
+  "weekDays": ["Mandag", "Tirsdag", "Onsdag", "Torsdag", "Fredag", "Lørdag", "Søndag"],
   "months": ["Januar", "Februar", "Mars", "April", "Mai", "Juni", "Juli", "August", "September", "Oktober", "November", "Desember"],
   "years": "Velg år",
   "year": "År",
@@ -11,5 +11,5 @@
   "allDay": "Hele dagen",
   "deleteEvent": "Ta bort",
   "createEvent": "Ny hendelse",
-  "dateFormat": "dddd den D MMMM YYYY"
+  "dateFormat": "dddd, D. MMMM YYYY"
 }
