Week days short in SQ language

--- a/src/vue-cal/i18n/sq.json
+++ b/src/vue-cal/i18n/sq.json
@@ -1,5 +1,6 @@
 {
   "weekDays": ["E Hënë","E Martë","E Mërkurë","E Enjte","E Premte","E Shtunë","E Diel"],
+  "weekDaysShort": ["Hë","Ma","Mr","Enj","Pr","Sh","D"],
   "months": ["Janar","Shkurt","Mars","Prill","Maj","Qershor","Korrik","Gushtë","Shtator","Tetor","Nëndor","Dhjetor"],
   "years": "Vitet",
   "year": "Viti",
