Add `days` translation in all the locales + weekdays abbrev if needed.

--- a/src/vue-cal/i18n/bg.json
+++ b/src/vue-cal/i18n/bg.json
@@ -5,6 +5,7 @@
   "year": "Година",
   "month": "Месец",
   "week": "Седмица",
+  "days": "Дни",
   "day": "Ден",
   "today": "Днес",
   "noEvent": "Няма събития",
