--- a/src/vue-cal/i18n/bn.json
+++ b/src/vue-cal/i18n/bn.json
@@ -5,6 +5,7 @@
   "year": "বছর",
   "month": "মাস",
   "week": "সপ্তাহ",
+  "days": "দিন",
   "day": "দিন",
   "today": "আজ",
   "noEvent": "কার্যসূচী",
