--- a/src/vue-cal/i18n/bs.json
+++ b/src/vue-cal/i18n/bs.json
@@ -5,6 +5,7 @@
   "year": "Godina",
   "month": "Mjesec",
   "week": "Sedmica",
+  "days": "Dana",
   "day": "Dan",
   "today": "Danas",
   "noEvent": "Nema događaja",
