--- a/src/vue-cal/i18n/ca.json
+++ b/src/vue-cal/i18n/ca.json
@@ -6,6 +6,7 @@
   "year": "Any",
   "month": "Mes",
   "week": "Setmana",
+  "days": "Dies",
   "day": "Dia",
   "today": "Avui",
   "noEvent": "No hi ha esdeveniments",
