--- a/src/vue-cal/i18n/cs.json
+++ b/src/vue-cal/i18n/cs.json
@@ -5,6 +5,7 @@
   "year": "Rok",
   "month": "Měsíc",
   "week": "Týden",
+  "days": "Dny",
   "day": "Den",
   "today": "Dnes",
   "noEvent": "Bez událostí",
