--- a/src/vue-cal/i18n/da.json
+++ b/src/vue-cal/i18n/da.json
@@ -5,6 +5,7 @@
   "year": "År",
   "month": "Måned",
   "week": "Uge",
+  "days": "Dage",
   "day": "Dag",
   "today": "I dag",
   "noEvent": "Ingen begivenhed",
