--- a/src/vue-cal/i18n/de.json
+++ b/src/vue-cal/i18n/de.json
@@ -5,6 +5,7 @@
   "year": "Jahr",
   "month": "Monat",
   "week": "Woche",
+  "days": "Tage",
   "day": "Tag",
   "today": "Heute",
   "noEvent": "Keine Events",
