--- a/src/vue-cal/i18n/el.json
+++ b/src/vue-cal/i18n/el.json
@@ -6,6 +6,7 @@
     "year": "Έτος",
     "month": "Μήνα",
     "week": "Εβδομάδα",
+    "days": "Ημέρες",
     "day": "Ημέρα",
     "today": "Σήμερα",
     "noEvent": "Κανένα συμβάν",
