--- a/src/vue-cal/i18n/en-us.json
+++ b/src/vue-cal/i18n/en-us.json
@@ -5,11 +5,12 @@
   "year": "Year",
   "month": "Month",
   "week": "Week",
+  "days": "Days",
   "day": "Day",
   "today": "Today",
   "noEvent": "No Event",
   "allDay": "All day",
   "deleteEvent": "Delete",
   "createEvent": "Create an event",
-  "dateFormat": "dddd MMMM D{S}, YYYY"
+  "dateFormat": "dddd, MMMM D, YYYY"
 }
