--- a/src/vue-cal/i18n/es.json
+++ b/src/vue-cal/i18n/es.json
@@ -5,6 +5,7 @@
   "year": "Año",
   "month": "Mes",
   "week": "Semana",
+  "days": "Días",
   "day": "Día",
   "today": "Hoy",
   "noEvent": "No hay evento",
