--- a/src/vue-cal/i18n/et.json
+++ b/src/vue-cal/i18n/et.json
@@ -5,6 +5,7 @@
   "year": "Aasta",
   "month": "Kuu",
   "week": "Nädal",
+  "days": "Päeva",
   "day": "Päev",
   "today": "Täna",
   "noEvent": "Sündmus puudub",
