--- a/src/vue-cal/i18n/fr.json
+++ b/src/vue-cal/i18n/fr.json
@@ -5,6 +5,7 @@
   "year": "Année",
   "month": "Mois",
   "week": "Semaine",
+  "days": "Jours",
   "day": "Jour",
   "today": "Aujourd'hui",
   "noEvent": "Aucun événement",
