--- a/src/vue-cal/i18n/hr.json
+++ b/src/vue-cal/i18n/hr.json
@@ -5,6 +5,7 @@
   "year": "Godina",
   "month": "Mjesec",
   "week": "Tjedan",
+  "days": "Dani",
   "day": "Dan",
   "today": "Današnji dan",
   "noEvent": "Nema događaja",
