--- a/src/vue-cal/i18n/hu.json
+++ b/src/vue-cal/i18n/hu.json
@@ -5,6 +5,7 @@
   "year": "Év",
   "month": "Hónap",
   "week": "Hét",
+  "days": "Napok",
   "day": "Nap",
   "today": "Mai nap",
   "noEvent": "Nincs esemény",
