--- a/src/vue-cal/i18n/id.json
+++ b/src/vue-cal/i18n/id.json
@@ -5,6 +5,7 @@
   "year": "Tahun",
   "month": "Bulan",
   "week": "Minggu",
+  "days": "Hari",
   "day": "Hari",
   "today": "Hari Ini",
   "noEvent": "Tidak Ada Kegiatan",
