--- a/src/vue-cal/i18n/is.json
+++ b/src/vue-cal/i18n/is.json
@@ -5,6 +5,7 @@
   "year": "Ár",
   "month": "Mánuður",
   "week": "Vika",
+  "days": "Dagar",
   "day": "Dagur",
   "today": "Í dag",
   "noEvent": "Enginn atburður",
