--- a/src/vue-cal/i18n/it.json
+++ b/src/vue-cal/i18n/it.json
@@ -5,6 +5,7 @@
   "year": "Anno",
   "month": "Mese",
   "week": "Settimana",
+  "days": "Giorni",
   "day": "Giorno",
   "today": "Oggi",
   "noEvent": "Nessun evento",
