--- a/src/vue-cal/i18n/ka.json
+++ b/src/vue-cal/i18n/ka.json
@@ -5,6 +5,7 @@
   "year": "წელი",
   "month": "თვე",
   "week": "კვირა",
+  "days": "დღეები",
   "day": "დღე",
   "today": "დღეს",
   "noEvent": "ღონისძიება არ არის",
