--- a/src/vue-cal/i18n/lt.json
+++ b/src/vue-cal/i18n/lt.json
@@ -5,6 +5,7 @@
   "year": "Metai",
   "month": "Mėnesis",
   "week": "Savaitė",
+  "days": "Dienos",
   "day": "Diena",
   "today": "Šiandien",
   "noEvent": "Jokių įvykių",
