--- a/src/vue-cal/i18n/mn.json
+++ b/src/vue-cal/i18n/mn.json
@@ -5,6 +5,7 @@
   "year": "Жил",
   "month": "Сар",
   "week": "Долоо хоног",
+  "days": "Өдрийн",
   "day": "Өдөр",
   "today": "Өнөөдөр",
   "noEvent": "Тэмдэглэлгүй",
