--- a/src/vue-cal/i18n/nl.json
+++ b/src/vue-cal/i18n/nl.json
@@ -5,6 +5,7 @@
   "year": "Jaar",
   "month": "Maand",
   "week": "Week",
+  "days": "Dagen",
   "day": "Dag",
   "today": "Vandaag",
   "noEvent": "Geen afspraken",
