--- a/src/vue-cal/i18n/no.json
+++ b/src/vue-cal/i18n/no.json
@@ -5,6 +5,7 @@
   "year": "År",
   "month": "Måned",
   "week": "Uke",
+  "days": "Dager",
   "day": "Dag",
   "today": "Idag",
   "noEvent": "Ingen hendelse",
