--- a/src/vue-cal/i18n/pl.json
+++ b/src/vue-cal/i18n/pl.json
@@ -5,6 +5,7 @@
   "year": "Rok",
   "month": "Miesiąc",
   "week": "Tydzień",
+  "days": "Dni",
   "day": "Dzień",
   "today": "Dzisiaj",
   "noEvent": "Brak wydarzeń",
