--- a/src/vue-cal/i18n/ro.json
+++ b/src/vue-cal/i18n/ro.json
@@ -5,6 +5,7 @@
   "year": "An",
   "month": "Lună",
   "week": "Săptămână",
+  "days": "Zile",
   "day": "Zi",
   "today": "Azi",
   "noEvent": "Nici o interacțiune",
