--- a/src/vue-cal/i18n/ru.json
+++ b/src/vue-cal/i18n/ru.json
@@ -6,6 +6,7 @@
   "year": "Год",
   "month": "Месяц",
   "week": "Неделя",
+  "days": "Дни",
   "day": "День",
   "today": "Сегодня",
   "noEvent": "Нет событий",
