--- a/src/vue-cal/i18n/sk.json
+++ b/src/vue-cal/i18n/sk.json
@@ -5,6 +5,7 @@
   "year": "Rok",
   "month": "Mesiac",
   "week": "Týždeň",
+  "days": "Dni",
   "day": "Deň",
   "today": "Dnes",
   "noEvent": "Bez udalosti",
