--- a/src/vue-cal/i18n/sl.json
+++ b/src/vue-cal/i18n/sl.json
@@ -5,6 +5,7 @@
   "year": "Leto",
   "month": "Mesec",
   "week": "Teden",
+  "days": "Dni",
   "day": "Dan",
   "today": "Danes",
   "noEvent": "Ni dogodkov",
