--- a/src/vue-cal/i18n/sq.json
+++ b/src/vue-cal/i18n/sq.json
@@ -6,6 +6,7 @@
   "year": "Viti",
   "month": "Muaji",
   "week": "Java",
+  "days": "Ditë",
   "day": "Dita",
   "today": "Sot",
   "noEvent": "Nuk ka event",
