--- a/src/vue-cal/i18n/sr.json
+++ b/src/vue-cal/i18n/sr.json
@@ -5,6 +5,7 @@
   "year": "Godina",
   "month": "Mesec",
   "week": "Sedmica",
+  "days": "Dana",
   "day": "Dan",
   "today": "Danas",
   "noEvent": "Nema događaja",
