--- a/src/vue-cal/i18n/sv.json
+++ b/src/vue-cal/i18n/sv.json
@@ -5,6 +5,7 @@
   "year": "År",
   "month": "Månad",
   "week": "Vecka",
+  "days": "Dagar",
   "day": "Dag",
   "today": "Idag",
   "noEvent": "Ingen händelse",
