--- a/src/vue-cal/i18n/tr.json
+++ b/src/vue-cal/i18n/tr.json
@@ -5,6 +5,7 @@
   "year": "Yıl",
   "month": "Ay",
   "week": "Hafta",
+  "days": "Günler",
   "day": "Gün",
   "today": "Bugün",
   "noEvent": "Etkinlik Yok",
