--- a/src/vue-cal/i18n/vi.json
+++ b/src/vue-cal/i18n/vi.json
@@ -6,6 +6,7 @@
   "year": "Năm nay",
   "month": "Tháng",
   "week": "Tuần",
+  "days": "Vài ngày",
   "day": "Ngày",
   "today": "Hôm nay",
   "noEvent": "NKhông có Event",
