--- a/src/vue-cal/i18n/ko.json
+++ b/src/vue-cal/i18n/ko.json
@@ -5,11 +5,13 @@
   "year": "연간",
   "month": "월간",
   "week": "주간",
+  "days": "일수",
   "day": "일간",
   "today": "오늘",
   "noEvent": "일정 없음",
   "allDay": "하루 종일",
   "deleteEvent": "삭제",
   "createEvent": "일정 추가",
-  "dateFormat": "YYYY년 MMMM D일 dddd요일"
+  "dateFormat": "YYYY년 MMMM D일 dddd요일",
+  "truncations": false
 }
