--- a/src/vue-cal/i18n/uk.json
+++ b/src/vue-cal/i18n/uk.json
@@ -1,11 +1,12 @@
 {
   "weekDays": ["Понеділок", "Вівторок", "Середа", "Четвер", "П'ятниця", "Субота", "Неділя"],
-  "months": ["Січень", "Лютий", "Березень", "Квітень", "Травень", "Червень", "Липень", "Серпень", "Вересень", "Жовтень", "Листопад", "Грудень"],
   "weekDaysShort": ["Пн", "Вт", "Ср", "Чт", "Пт", "Сб", "Нд"],
+  "months": ["Січень", "Лютий", "Березень", "Квітень", "Травень", "Червень", "Липень", "Серпень", "Вересень", "Жовтень", "Листопад", "Грудень"],
   "years": "Роки",
   "year": "Рік",
   "month": "Місяць",
   "week": "Тиждень",
+  "days": "Дні",
   "day": "День",
   "today": "Сьогодні",
   "noEvent": "Немає подій",
