Update the date format in Finnish.

--- a/src/vue-cal/i18n/fi.json
+++ b/src/vue-cal/i18n/fi.json
@@ -11,5 +11,5 @@
 	"allDay": "Koko päivä",
 	"deleteEvent": "Poista tapahtuma",
 	"createEvent": "Luo tapahtuma",
-	"dateFormat": "dddd MMMM D{S}, YYYY"
+	"dateFormat": "dddd, D MMMM YYYY"
 }
