Update the new locales for new texts.

--- a/src/vue-cal/i18n/fi.json
+++ b/src/vue-cal/i18n/fi.json
@@ -5,6 +5,7 @@
 	"year": "Vuosi",
 	"month": "Kuukausi",
 	"week": "Viikko",
+  "days": "Päivät",
 	"day": "Päivä",
 	"today": "Tänään",
 	"noEvent": "Ei tapahtumia",
