--- a/src/vue-cal/i18n/pt-pt.json
+++ b/src/vue-cal/i18n/pt-pt.json
@@ -5,6 +5,7 @@
   "year": "Ano",
   "month": "Mês",
   "week": "Semana",
+  "days": "Dias",
   "day": "Dia",
   "today": "Hoje",
   "noEvent": "Sem eventos",
