Fixed el's month

--- a/src/vue-cal/i18n/el.json
+++ b/src/vue-cal/i18n/el.json
@@ -4,7 +4,7 @@
     "monthsGenitive": ["Ιανουαρίου", "Φεβρουαρίου", "Μαρτίου", "Απριλίου", "Μαΐου", "Ιουνίου", "Ιουλίου", "Αυγούστου", "Σεπτεμβρίου", "Οκτωβρίου", "Νοεμβρίου", "Δεκεμβρίου"],
     "years": "Έτη",
     "year": "Έτος",
-    "month": "Μήνα",
+    "month": "Μήνας",
     "week": "Εβδομάδα",
     "days": "Ημέρες",
     "day": "Ημέρα",
