--- a/src/vue-cal/i18n/en-us.json
+++ b/src/vue-cal/i18n/en-us.json
@@ -9,7 +9,7 @@
   "day": "Day",
   "today": "Today",
   "noEvent": "No Event",
-  "allDay": "All day",
+  "allDay": "All-day",
   "deleteEvent": "Delete",
   "createEvent": "Create an event",
   "dateFormat": "dddd, MMMM D, YYYY"
