#i18n/pr-100 ru genitive months

--- a/src/vue-cal/i18n/ru.json
+++ b/src/vue-cal/i18n/ru.json
@@ -2,6 +2,7 @@
   "weekDays": ["Понедельник", "Вторник", "Среда", "Четверг", "Пятница", "Суббота", "Воскресенье"],
   "weekDaysShort": ["Пн", "Вт", "Ср", "Чт", "Пт", "Сб", "Вс"],
   "months": ["Январь", "Февраль", "Март", "Апрель", "Май", "Июнь", "Июль", "Август", "Сентябрь", "Октябрь", "Ноябрь", "Декабрь"],
+  "monthsGenitive": ["Января", "Февраля", "Марта", "Апреля", "Мая", "Июня", "Июля", "Августа", "Сентября", "Октября", "Ноября", "Декабря"],
   "years": "Годы",
   "year": "Год",
   "month": "Месяц",
